<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        app:elevation="@dimen/default_elevation"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/CollapsingTextStyle"
            app:collapsedTitleTextAppearance="@style/CollapsingTextStyle">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                android:layout_height="?actionBarSize"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="@dimen/default_fab_size"
        android:layout_height="@dimen/default_fab_size"
        android:layout_margin="@dimen/default_fab_margin"
        app:fab_elevationCompat="@dimen/default_elevation"
        android:src="@drawable/ic_check_white_48dp"
        android:tint="@android:color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:layout_width="@dimen/default_image_size"
                    android:layout_height="@dimen/default_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_create_white_48dp"
                    android:tint="@color/colorAccent"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:padding="@dimen/default_padding"
                    android:layout_gravity="bottom">

                    <EditText
                        android:id="@+id/courseName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_course_name"
                        android:textColor="@color/subTextColor"
                        android:textAppearance="?android:textAppearanceMedium" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:id="@+id/courseColorImage"
                    android:layout_width="@dimen/default_image_size"
                    android:layout_height="@dimen/default_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_color_lens_black_48dp"
                    android:tint="@color/colorAccent"/>

                <LinearLayout
                    android:id="@+id/courseColorRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_color"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <ImageView
                        android:id="@+id/courseColor"
                        android:layout_width="@dimen/default_image_size"
                        android:layout_height="@dimen/default_image_size"
                        android:layout_marginTop="@dimen/default_margin_top"
                        android:src="@drawable/circle"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:layout_width="@dimen/default_image_size"
                    android:layout_height="@dimen/default_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person_white_48dp"
                    android:tint="@color/colorAccent"/>


                <LinearLayout
                    android:id="@+id/professorRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/professor"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <TextView
                        android:id="@+id/profName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_top"
                        android:text=""
                        android:hint="@string/hint_prof_name"
                        android:fontFamily="sans-serif-medium"
                        android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:layout_width="@dimen/default_image_size"
                    android:layout_height="@dimen/default_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_calendar_today_black_48dp"
                    android:tint="@color/colorAccent"/>


                <LinearLayout
                    android:id="@+id/courseDaysRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_days"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <TextView
                        android:id="@+id/courseDays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_top"
                        android:text=""
                        android:hint="@string/hint_course_days"
                        android:fontFamily="sans-serif-medium"
                        android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:layout_width="@dimen/default_image_size"
                    android:layout_height="@dimen/default_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_location_on_black_48dp"
                    android:tint="@color/colorAccent"/>



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:padding="@dimen/default_padding"
                    android:layout_gravity="bottom">

                    <EditText
                        android:id="@+id/courseLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/course_location"
                        android:textColor="@color/subTextColor"
                        android:textAppearance="?android:textAppearanceMedium" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:layout_width="@dimen/default_image_size"
                    android:layout_height="@dimen/default_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_event_white_48dp"
                    android:tint="@color/colorAccent"/>


                <LinearLayout
                    android:id="@+id/courseStartDateRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/default_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_start_date"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <TextView
                        android:id="@+id/courseStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_top"
                        android:hint="@string/hint_course_date"
                        android:fontFamily="sans-serif-medium"
                        android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/courseEndDateRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/default_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_end_date"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <TextView
                        android:id="@+id/courseEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_top"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/hint_course_date"
                        android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding">

                <ImageView
                    android:id="@+id/itemImageView"
                    android:layout_width="@dimen/default_image_size"
                    android:layout_height="@dimen/default_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_schedule_black_48dp"
                    android:tint="@color/colorAccent"/>


                <LinearLayout
                    android:id="@+id/courseStartRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/default_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_start_time"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <TextView
                        android:id="@+id/courseStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_top"
                        android:hint="@string/hint_course_time"
                        android:fontFamily="sans-serif-medium"
                        android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/courseEndRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/default_margin_left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_end_time"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"/>


                    <TextView
                        android:id="@+id/courseEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_top"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/hint_course_time"
                        android:textAppearance="?android:textAppearanceMedium"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>